Add pagination to GET /api/v1/policies with custom PageResponse wrapper
- Create PageResponse<T> generic record with data/page/size/total/totalPages
- Add toResponsePage default method to PolicyMapper
- Update PolicyService.getAllPolicies to accept Pageable and return PageResponse
- Update PolicyController.list with @PageableDefault(size=20)
- Update all tests for paginated response shape